Bug 1263171 - Remove custom identity box color for chrome pages in non-release builds since it doesn't provide sufficient contrast with dark themes. r=gijs
UltraBlame original commit: 58a5ab186197a0c9ecbbace0637622df0cdade7a

--- a/browser/themes/shared/devedition.inc.css
+++ b/browser/themes/shared/devedition.inc.css
@@ -810,34 +810,6 @@ root
 devtoolstheme
 =
 "
-dark
-"
-]
-#
-identity
--
-box
-{
--
--
-identity
--
-box
--
-chrome
--
-color
-:
-#
-46afe3
-;
-}
-:
-root
-[
-devtoolstheme
-=
-"
 light
 "
 ]
